# ecomm-prod-assistant

./: .dockerignore  .gitignore  README.md  get_lib_versions.py  pyproject.toml  requirements.txt  scrapper_ui.py
.github/workflows/: deploy.yml  infra.yml
infra/: eks-with-ecr.yaml
k8/: deployment.yaml
notebook/: test.ipynb
prod_assistant/config/: config.yaml
prod_assistant/etl/: data_ingestion.py  data_scrapper.py
prod_assistant/evaluation/: ragas_eval.py
prod_assistant/mcp_servers/: client.py  product_search_server.py
prod_assistant/prompt_library/: prompts.py
prod_assistant/retriever/: retrieval.py
prod_assistant/router/: main.py
prod_assistant/utils/: config_loader.py  model_loader.py
prod_assistant/workflow/: agentic_rag_workflow.py  agentic_workflow_with_mcp.py  agentic_workflow_with_mcp_websearch.py  normal_generation_workflow.py
